...
    }
    
    private func proceedToNextStep() {
        if currentQuestionIndex == questionsAmount - 1 {
            statisticsService.store(correct: correctAnswersCount, total: questionsAmount)
            let result = QuizResultViewModel(
                title: "Этот раунд окончен!",
                text: makeResultMessage(),
                buttonText: "Сыграть ещё раз"
            )
            viewController?.show(quiz: result)
        } else {
            currentQuestionIndex += 1
...
